Adicionado as Libis Json-server e Concurrently

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+ul {
+  list-style-type: none;
+}
+
 :root {
   --primary: #2A7AE4;
   --black: #000000;
